Alteração de Projeto a pedido do cliente

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
         </nav>
         <div>
-          <h4>Garbimaq</h4>
+          <img class="garbimaq-logo-img" src="assets/garbimaq-logo-2.png" alt="Logo da Empresa Garbimaq - Manutenção de Impressoras, Scanners, ScanNCut e Rotuladores">
         </div>
       </header>
       <div class="hero">
@@ -41,8 +41,8 @@
           <div class="hero-content">
             <h1>Assistência Técnica Profissional de Impressoras</h1>
             <p>
-              Os melhores preços e a garantia de qualidade dos nossos serviços.
-              Entre em contato
+              <strong>Com 25 anos de experiência em manutenções</strong>, oferecemos soluções rápidas,
+              confiáveis e com o melhor custo-benefício. Fale conosco!
             </p>
             <a
               href="https://wa.me/5511995488888"
@@ -54,7 +54,7 @@
           <div>
             <img
               class="hero-img"
-              src="assets/printer-png-hd-printer-png-image-printer-hd-png-1500.png"
+              src="assets/brother-5662.png"
               alt="Impressora HP ilustrativa"
             />
           </div>
@@ -68,7 +68,7 @@
               <h3>Orçamento Rápido</h3>
             </div>
             <div class="card-description">
-              <p>Enviamos orçamentos em até 24h.</p>
+              <p>Não cobramos orçamento e enviamos em até 24h.</p>
             </div>
           </div>
 
@@ -112,13 +112,9 @@
             </h2>
             <p class="paragraph">
               A Garbimaq é uma empresa de assistência técnica de impressoras
-              <strong
-                >HP linha laser fora de garantia, Lexmark, Samsung, Zebra,
-                Argox,</strong
-              >
-              além de ser a <strong>única empresa de Jundiaí</strong> e região
-              autorizada pela <strong>Brother</strong> para executar manutenções
-              em impressoras multifuncionais, rotuladores, scanners e ScanNCut.
+              <strong>HP, Lexmark, Samsung, Zebra, Argox,</strong> e autorizada
+              <strong>Brother</strong> para executar manutenções em impressoras
+              multifuncionais, rotuladores, scanners e ScanNCut.
             </p>
           </div>
 
@@ -3635,13 +3631,18 @@
             >
           </div>
           <div class="wrapper">
-            <a class="contact-link" href="https://wa.me/5511995488888" target="_blank"
+            <a
+              class="contact-link"
+              href="https://wa.me/5511995488888"
+              target="_blank"
               ><i class="ph-fill ph-whatsapp-logo"></i>WhatsApp: (11)
               99548-8888</a
             >
           </div>
           <div class="wrapper">
-            <a class="contact-link" href="#mailto:garbimaq@garbimaq.com.br"><i class="ph-fill ph-envelope"></i>garbimaq@garbimaq.com.br</a>
+            <a class="contact-link" href="#mailto:garbimaq@garbimaq.com.br"
+              ><i class="ph-fill ph-envelope"></i>garbimaq@garbimaq.com.br</a
+            >
           </div>
         </section>
 
@@ -3667,15 +3668,15 @@
         </section>
       </main>
       <footer>
-        <h4>Garbimaq</h4>
+        <div>
+          <img class="garbimaq-logo-img" src="assets/garbimaq-logo.png" alt="">
+        </div>
         <div class="footer-location">
           <h5>Localização</h5>
-           <a
-              href="https://maps.app.goo.gl/6SVsJqjBtmjpqihx5"
-              target="_blank"
-              ><i class="ph-fill ph-map-pin"></i>Rua Carlos Gomes, 1188 - Ponte
-              São João - Jundiaí/SP</a
-            >
+          <a href="https://maps.app.goo.gl/6SVsJqjBtmjpqihx5" target="_blank"
+            ><i class="ph-fill ph-map-pin"></i>Rua Carlos Gomes, 1188 - Ponte
+            São João - Jundiaí/SP</a
+          >
         </div>
         <div class="footer-workdays">
           <h5>Horário de Atendimento</h5>
