--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="assets/garbimaq-logo-2.png" type="image/x-icon">
     <script src="./js/main.js" defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
